// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DomainFormik should generate complex form 1`] = `
<form
  className=""
  name="User"
  onSubmit={[Function]}
>
  <div
    className="form-group"
  >
    <label
      className=""
      htmlFor={undefined}
    >
      Username
    </label>
    <input
      className="form-control"
      label="Username"
      name="username"
      onBlur={[Function]}
      onChange={[Function]}
      placeholder="Username"
      type="text"
      value="User"
    />
  </div>
  <div
    className="form-group"
  >
    <label
      className=""
      htmlFor={undefined}
    >
      Email
    </label>
    <input
      className="form-control"
      label="Email"
      name="email"
      onBlur={[Function]}
      onChange={[Function]}
      placeholder="User email"
      type="email"
      value=""
    />
  </div>
  <div
    className="form-group"
  >
    <label
      className=""
      htmlFor={undefined}
    >
      First Name
    </label>
    <input
      className="form-control"
      label="First Name"
      name="firstName"
      onBlur={[Function]}
      onChange={[Function]}
      placeholder="First Name"
      type="text"
      value="Ashley"
    />
  </div>
  <div
    className="form-group"
  >
    <label
      className=""
      htmlFor={undefined}
    >
      Last Name
    </label>
    <input
      className="form-control"
      label="Last Name"
      name="lastName"
      onBlur={[Function]}
      onChange={[Function]}
      placeholder="Last Name"
      type="text"
      value=""
    />
  </div>
  <div
    className="form-group"
  >
    <label
      className=""
      htmlFor={undefined}
    >
      Password
    </label>
    <input
      className="form-control"
      label="Password"
      name="password"
      onBlur={[Function]}
      onChange={[Function]}
      placeholder="Password"
      type="password"
      value=""
    />
  </div>
  <div
    className="form-group"
  >
    <label
      className=""
      htmlFor={undefined}
    >
      Password Confirmation
    </label>
    <input
      className="form-control"
      label="Password Confirmation"
      name="passwordConfirmation"
      onBlur={[Function]}
      onChange={[Function]}
      placeholder="Password Confirmation"
      type="password"
      value=""
    />
  </div>
  <div>
    <button
      className="btn btn-secondary disabled"
      disabled={true}
      onClick={[Function]}
      type="submit"
    >
      Submit
    </button>
  </div>
</form>
`;

exports[`DomainFormik should generate form with custom field 1`] = `
<form
  className=""
  name="User"
  onSubmit={[Function]}
>
  <div
    className="form-group"
  >
    <label
      className=""
      htmlFor={undefined}
    >
      Username
    </label>
    <input
      className="form-control"
      inputType="text"
      label="Username"
      name="username"
      onBlur={[Function]}
      onChange={[Function]}
      placeholder="Username"
      type="text"
      value="User"
    />
  </div>
  <div>
    <input
      className="my-awesome-field"
      name="userfield"
      placeholder="User Field"
      value="my field"
    />
  </div>
  <div>
    <button
      className="btn btn-secondary"
      onClick={[Function]}
      type="submit"
    >
      Submit
    </button>
  </div>
</form>
`;

exports[`DomainFormik should generate simple form 1`] = `
<form
  className=""
  name="User"
  onSubmit={[Function]}
>
  <div
    className="form-group"
  >
    <label
      className=""
      htmlFor={undefined}
    >
      Username
    </label>
    <input
      className="form-control"
      label="Username"
      name="username"
      onBlur={[Function]}
      onChange={[Function]}
      placeholder="name"
      type="text"
      value="John"
    />
  </div>
  <div
    className="form-group"
  >
    <label
      className=""
      htmlFor={undefined}
    >
      Email
    </label>
    <input
      className="form-control"
      label="Email"
      name="email"
      onBlur={[Function]}
      onChange={[Function]}
      placeholder="Email"
      type="email"
      value=""
    />
  </div>
  <div
    className="form-group"
  >
    <label
      className=""
      htmlFor={undefined}
    >
      Email
    </label>
    <input
      className="form-control"
      label="Email"
      name="pass"
      onBlur={[Function]}
      onChange={[Function]}
      placeholder="Email"
      type="password"
      value=""
    />
  </div>
  <div
    className="form-check"
  >
    <label
      className="form-check-label "
      htmlFor={undefined}
    >
      <input
        checked={true}
        className="form-check-input"
        label="Is Active"
        name="isActive"
        onBlur={[Function]}
        onChange={[Function]}
        type="checkbox"
      />
       
      Is Active
    </label>
  </div>
  <div>
    <button
      className="btn btn-secondary"
      onClick={[Function]}
      type="submit"
    >
      Save
    </button>
  </div>
</form>
`;
